@@ -1,3 +1,5 @@
+2009-12-17 Ali Erkan İMREK <alierkanimrek.gmail.com>
+     * Repo size adding to metadata.xml
 2009-12-12 Ali Erkan İMREK <alierkanimrek.gmail.com>
      * Package sizes adding to files.xml
 2009-11-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
